--- a/index.html
+++ b/index.html
@@ -78,7 +78,17 @@ Please request permission before copying or modifying any part of any related fi
                             <p>[Insert picture here]<br/>
                                 <span style="color: rgb(44, 137, 158)">gretchen.rice@students.olin.edu</span>
                             </p></center>
-                        <p style="text-align: justify">The Powerpuff Girls is an American animated television series created by animator Craig McCracken for Cartoon Network. The show centers on Blossom, Bubbles, and Buttercup, three girls with superpowers, as well as their father, the brainy scientist Professor Utonium, who all live in the real city of Townsville, Australia. The girls are frequently called upon by the town's childlike and naive mayor to help fight nearby criminals using their powers.</p></td>
+                        <p style="text-align: justify">The Powerpuff Girls is an American animated
+                                                       television series created by animator Craig
+                                                       McCracken for Cartoon Network. The show
+                                                       centers on Blossom, Bubbles, and Buttercup,
+                                                       three girls with superpowers, as well as
+                                                       their father, the brainy scientist Professor
+                                                       Utonium, who all live in the real city of
+                                                       Townsville, Australia. The girls are
+                                                       frequently called upon by the town's
+                                                       childlike and naive mayor to help fight
+                                                       nearby criminals using their powers.</p></td>
                     <td>
                         <center><h2>Emily</h2>
                             <img src="https://image.ibb.co/mCLeVF/emily.png"
@@ -157,8 +167,9 @@ Please request permission before copying or modifying any part of any related fi
 <div id="calendar" class="fill-page white-background">
     <center><h1>Semester <span style="color: rgb(0, 204, 255)">Calendar</span></h1></center>
 
-    <center><p><em>Click on any highlighted day to learn more about the event(s) on that day.</em></p>
-        </center>
+    <center><p><em>Click on any highlighted day to learn more about the event(s) on that day.</em>
+    </p>
+    </center>
 
     <center>
         <table style="border: 0.1em solid darkgray;">
@@ -252,7 +263,12 @@ Please request permission before copying or modifying any part of any related fi
         <td class="calendar">
             <div id="september27" class="calendar-content"
                  style="background-color: rgba(255, 227, 137, 0.5); cursor: pointer;">27<br/><br/>
-                <center>PGP<br/><br/><div style="background-color: rgba(178, 255, 147, 0.5); padding: 10%;">Practice Career Fair</div></center>
+                <center>PGP<br/><br/>
+                    <div style="background-color: rgba(178, 255, 147, 0.5); padding: 10%;">Practice
+                                                                                           Career
+                                                                                           Fair
+                    </div>
+                </center>
             </div>
         </td>
         <td class="calendar">
@@ -436,7 +452,9 @@ Please request permission before copying or modifying any part of any related fi
             <div id="november08" class="calendar-content"
                  style="background-color: rgba(255, 227, 137, 0.5); cursor: pointer">8<br/><br/>
                 <center>Financial Literacy<br/><br/>
-                    <div style="padding: 10%; background-color: rgba(178, 255, 147, 0.5);">Finances Fair</div>
+                    <div style="padding: 10%; background-color: rgba(178, 255, 147, 0.5);">Finances
+                                                                                           Fair
+                    </div>
                 </center>
             </div>
         </td>
@@ -678,11 +696,15 @@ Please request permission before copying or modifying any part of any related fi
             </div>
             <div class="modal-body">
                 <p>Class Time: 9am-10:40am<br/>
-                Class Location: Oooh, do we want to have them start in the lab and shops and walk through?<br/>
-                Class Activity: Case Studies, Presentation<br/>
-                Affiliated Activity: ???<br/>
-                GCSP-option: ???<br/>
-                Designed and/or facilitated by Rae-Anne (rae-anne.butera@olin.edu), Daniela (daniela.faas@olin.edu), Louise (louise.nielson@olin.edu), March (march.saper@students.olin.edu), Lucky (lakhvinder.jordan@students.olin.edu), and Sophie (sophie.schaffer@students.olin.edu)</p>
+                   Class Location: Oooh, do we want to have them start in the lab and shops and walk
+                   through?<br/>
+                   Class Activity: Case Studies, Presentation<br/>
+                   Affiliated Activity: ???<br/>
+                   GCSP-option: ???<br/>
+                   Designed and/or facilitated by Rae-Anne (rae-anne.butera@olin.edu), Daniela
+                   (daniela.faas@olin.edu), Louise (louise.nielson@olin.edu), March
+                   (march.saper@students.olin.edu), Lucky (lakhvinder.jordan@students.olin.edu), and
+                   Sophie (sophie.schaffer@students.olin.edu)</p>
             </div>
             <div class="modal-footer">
                 <p style="text-align: center;">This is a regular class, after which you are expected
@@ -700,11 +722,14 @@ Please request permission before copying or modifying any part of any related fi
             </div>
             <div class="modal-body">
                 <p>Class Time: 9am-10:40am<br/>
-                Class Location: Crescent Room, Campus Center<br/>
-                Class Activity: ???<br/>
-                Affiliated Activity: Relationship Panel, West Hall, [insert time and description here]<br/>
-                GCSP-option: ???<br/>
-                Designed and/or facilitated by Rame (rame.hanna@olin.edu), Elena (elena.meyerson@students.olin.edu), and Sophie (sophie.schaffer@students.olin.edu) </p>
+                   Class Location: Crescent Room, Campus Center<br/>
+                   Class Activity: ???<br/>
+                   Affiliated Activity: Relationship Panel, West Hall, [insert time and description
+                   here]<br/>
+                   GCSP-option: ???<br/>
+                   Designed and/or facilitated by Rame (rame.hanna@olin.edu), Elena
+                   (elena.meyerson@students.olin.edu), and Sophie
+                   (sophie.schaffer@students.olin.edu) </p>
             </div>
             <div class="modal-footer">
                 <p style="text-align: center;">This is a regular class, after which you are expected
@@ -754,11 +779,16 @@ Please request permission before copying or modifying any part of any related fi
             </div>
             <div class="modal-body">
                 <p>Class Time: 9am-10:40am<br/>
-                Class Location: Crescent Room, Campus Center<br/>
-                Class Activity: ???<br/>
-                Affiliated Activity: Failure Panel, [insert time and description]<br/>
-                GCSP-option:???<br/>
-                Designed and/or facilitated by Jon (jonathan.adler@olin.edu), Sara (sara.hendren@olin.edu), Adva, Elena (elena.meyerson@students.olin.edu), Sophie (sophie.schaffer@students.olin.edu), Christina (christina.seger@students.olin.edu), Prava (pravallika.dhulipalla@students.olin.edu), and March (march.saper@students.olin.edu)</p>
+                   Class Location: Crescent Room, Campus Center<br/>
+                   Class Activity: ???<br/>
+                   Affiliated Activity: Failure Panel, [insert time and description]<br/>
+                   GCSP-option:???<br/>
+                   Designed and/or facilitated by Jon (jonathan.adler@olin.edu), Sara
+                   (sara.hendren@olin.edu), Adva, Elena (elena.meyerson@students.olin.edu), Sophie
+                   (sophie.schaffer@students.olin.edu), Christina
+                   (christina.seger@students.olin.edu), Prava
+                   (pravallika.dhulipalla@students.olin.edu), and March
+                   (march.saper@students.olin.edu)</p>
             </div>
             <div class="modal-footer">
                 <p style="text-align: center;">This is a regular class, after which you are expected
@@ -791,10 +821,15 @@ Please request permission before copying or modifying any part of any related fi
                 <h2>Feedback and Teaming</h2>
             </div>
             <div class="modal-body">
-                <p>Class Time: 9am-12pm (this means you have no additional work to do this week)<br/>
-                Class Location: Crescent Room, Campus Center<br/>
-                Class Activity:???<br/>
-                Designed and/or facilitated by Nur (nur.shlapobersky@students.olin.edu),  Sophie (sophie.schaffer@students.olin.edu), Christina (christina.seger@students.olin.edu), Prava (pravallika.dhulipalla@students.olin.edu), and Lucky (lakhvinder.jordan@students.olin.edu)</p>
+                <p>Class Time: 9am-12pm (this means you have no additional work to do this
+                   week)<br/>
+                   Class Location: Crescent Room, Campus Center<br/>
+                   Class Activity:???<br/>
+                   Designed and/or facilitated by Nur (nur.shlapobersky@students.olin.edu), Sophie
+                   (sophie.schaffer@students.olin.edu), Christina
+                   (christina.seger@students.olin.edu), Prava
+                   (pravallika.dhulipalla@students.olin.edu), and Lucky
+                   (lakhvinder.jordan@students.olin.edu)</p>
             </div>
             <div class="modal-footer">
                 <p style="text-align: center;">This is an extended class, after which you are not
@@ -885,10 +920,11 @@ Please request permission before copying or modifying any part of any related fi
             </div>
             <div class="modal-body">
                 <p>Class Time: 9am-10:40am<br/>
-                Class Location: Crescent Room, Campus Center<br/>
-                Class Activity: <br/>
-                Affiliated Activity: PGP Help Sessions<br/>
-                Designed and/or facilitated by Ellise LaMotte (elisse.lamotte@olin.edu) and Lucky (lakhvinder.jordan@students.olin.edu)</p>
+                   Class Location: Crescent Room, Campus Center<br/>
+                   Class Activity: <br/>
+                   Affiliated Activity: PGP Help Sessions<br/>
+                   Designed and/or facilitated by Ellise LaMotte (elisse.lamotte@olin.edu) and Lucky
+                   (lakhvinder.jordan@students.olin.edu)</p>
             </div>
             <div class="modal-footer">
                 <p style="text-align: center;">This is a regular class, after which you are expected
@@ -906,11 +942,14 @@ Please request permission before copying or modifying any part of any related fi
             </div>
             <div class="modal-body">
                 <p>Class Time: 9am-10:40am<br/>
-                Class Location: <br/>
-                Class Activity: <br/>
-                Affiliated Activity: GCSP presentation<br/>
-                GCSP option: ???<br/>
-                Designed and/or facilitated by Alexandra (Alexandra.Strong@olin.edu), Alison (Alison.Wood@olin.edu), Prava (pravallika.dhulipalla@students.olin.edu), Nur (nur.shlapobersky@students.olin.edu), and Elena (elena.meyerson@students.olin.edu)</p>
+                   Class Location: <br/>
+                   Class Activity: <br/>
+                   Affiliated Activity: GCSP presentation<br/>
+                   GCSP option: ???<br/>
+                   Designed and/or facilitated by Alexandra (Alexandra.Strong@olin.edu), Alison
+                   (Alison.Wood@olin.edu), Prava (pravallika.dhulipalla@students.olin.edu), Nur
+                   (nur.shlapobersky@students.olin.edu), and Elena
+                   (elena.meyerson@students.olin.edu)</p>
             </div>
             <div class="modal-footer">
                 <p style="text-align: center;">This is a regular class, after which you are expected
@@ -943,16 +982,17 @@ Please request permission before copying or modifying any part of any related fi
                 <h2>Make-Up Day (if needed)</h2>
             </div>
             <div class="modal-body">
-                <p>To be edited, in the event that this day is needed. Otherwise, enjoy a day off!</p>
+                <p>To be edited, in the event that this day is needed. Otherwise, enjoy a day
+                   off!</p>
             </div>
             <div class="modal-footer">
-                <p style="text-align: center;">This would be a regular class, after which you would be expected
+                <p style="text-align: center;">This would be a regular class, after which you would
+                                               be expected
                                                to attend an Affiliated Activity and/or complete a
                                                GCSP assignment.</p>
             </div>
         </div>
     </div>
-
 
 </div>
 
@@ -983,6 +1023,7 @@ $(document).ready(function(){
 });
 
 
+
 </script>
 
 <script src="http://code.jquery.com/jquery-latest.js"></script>
@@ -999,6 +1040,7 @@ $(document).ready(function(){
     });
   }); 
 })(jQuery);
+
 
 
 </script>
@@ -1108,6 +1150,7 @@ function open_modal(x) {
     modals[x].style.display = "block";
   }
 }
+
 
 </script>
 </body>
